--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banana-speak</title>
+    <title>Minions-talk</title>
+    <style>
+        #Heading{
+            width: 100%;
+            height: 50px;
+            background-color: goldenrod;
+        }
+    </style>
 </head>
 <body>
-    
+    <div id ="Heading">
+        <h1>Minions talk</h1>
+    </div>
 </body>
 </html>
