updated ui with footer

--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
             margin: 10px;
         }
 
+        #about{
+
+            text-align: center;
+            padding: 16px;
+            margin-top: 100px;
+            background-color:  goldenrod;
+            font-family: 'Comic Sans MS', cursive;
+
+        }
+
         body h1 h2 h3 h4 h5 h6 {
             font-family: 'Comic Sans MS', cursive;
         }
@@ -61,6 +71,10 @@
     <textarea id="txt-input" placeholder="Put your text here and we will convert it into minion's language"></textarea>
     <button id="btn-translate">Let's translate</button>
     <div id="output">Output will come here 👇</div>
+
+
+    <footer id="about"><h3>Are you a fan of minions? </h3>
+        <p>Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p</footer>
     <script src="app.js"></script>
 </body>
 </html>
